# auto-commit

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  prompt.md
src/: cli.rs  config.rs  debounce.rs  errors.rs  git.rs  ignore.rs  main.rs  version.rs  watcher.rs
