[package]
name = "autocommit"
version = "0.1.0"
edition = "2021"
description = "Automatically create Git commits whenever a coding session finishes"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/Nciibi/auto-commit"
repository = "https://github.com/Nciibi/auto-commit"
keywords = ["git", "automation", "commit", "versioning", "cli"]
categories = ["command-line-utilities", "development-tools::git"]

[dependencies]
# File system notifications
notify = "7"

# Git ignore rule matching
ignore = "0.4"

# Git repository operations
git2 = "0.19"

# Semantic versioning
semver = "1"

# Error handling
anyhow = "1"
thiserror = "2"

# CLI argument parsing
clap = { version = "4", features = ["derive"] }

# Terminal colors
colored = "2"

# Ctrl+C signal handling
ctrlc = "3"

# Terminal detection (color support)
atty = "0.2"

[dev-dependencies]
tempfile = "3"
